# VulkanEnumClasses

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
generator/: generate.cpp  generate.hpp  main.cpp  parsing_utils.hpp
